--- a/style.css
+++ b/style.css
@@ -324,8 +324,11 @@
     position: absolute;
     top: 50%;
     left: 50%;
+
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
+
+    /* z-index: -1; */
     background-color: #0DCAF0;
     color: white;
     font-size: 16px;
